--- a/Assignment 2/C_Topic Modeling.ipynb
+++ b/Assignment 2/C_Topic Modeling.ipynb
@@ -1413,7 +1413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recommendation: NatGeo should make posts with its top photographers showing natural landscapes, specifically the Artic and African landscapes with its wildlife."
+    "### Recommendation: To increase engagement, NatGeo should make posts with its top photographers showing natural landscapes, specifically the Artic and African landscapes with its wildlife."
    ]
   }
  ],
