--- a/Assignment 2/Assignment 2 - Part B-V2.ipynb
+++ b/Assignment 2/Assignment 2 - Part B-V2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "4  whales humpbackwhales parenting planetofthewhales  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,9 +195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Akhil\\Anaconda2\\envs\\py36\\lib\\site-packages\\sklearn\\ensemble\\weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "count_vect = CountVectorizer()\n",
@@ -220,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +389,7 @@
        "4  [0.9205442667007446, 0.9068462252616882, 0.808...  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +458,6 @@
        "      <th>scores</th>\n",
        "      <th>labels1</th>\n",
        "      <th>labels2</th>\n",
-       "      <th>final_vector</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -467,7 +475,6 @@
        "      <td>[0.6388171315193176, 0.631462812423706, 0.6256...</td>\n",
        "      <td>[Leisure, Party, Drink, Vacation, Sitting, Fur...</td>\n",
        "      <td>leisure party drink vacation sitting furniture...</td>\n",
-       "      <td>happypills pills pharma bigpharmaleisure party...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -483,7 +490,6 @@
        "      <td>[0.9923034310340881, 0.987432062625885, 0.9084...</td>\n",
        "      <td>[Mountainous landforms, Mountain, Mountain ran...</td>\n",
        "      <td>mountainous landforms mountain mountain range ...</td>\n",
-       "      <td>1 2mountainous landforms mountain mountain ran...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -499,7 +505,6 @@
        "      <td>[0.9000945091247559, 0.840880811214447, 0.7956...</td>\n",
        "      <td>[Tree, Adaptation, Working animal, Child, Gras...</td>\n",
        "      <td>tree adaptation working animal child grass pla...</td>\n",
-       "      <td>followme madagascar enoughness naturetree adap...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -515,7 +520,6 @@
        "      <td>[0.9960000514984131, 0.9883484244346619, 0.985...</td>\n",
        "      <td>[Bird, Penguin, Vertebrate, Flightless bird, B...</td>\n",
        "      <td>bird penguin vertebrate flightless bird beak a...</td>\n",
-       "      <td>snowstorm penguin antarcticabird penguin verte...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -531,7 +535,6 @@
        "      <td>[0.945663571357727, 0.9357404112815857, 0.9342...</td>\n",
        "      <td>[Marine mammal, Marine biology, Cetacea, Under...</td>\n",
        "      <td>marine mammal marine biology cetacea underwate...</td>\n",
-       "      <td>whales humpbackwhales parenting planetofthewha...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -587,22 +590,15 @@
        "3  [Bird, Penguin, Vertebrate, Flightless bird, B...   \n",
        "4  [Marine mammal, Marine biology, Cetacea, Under...   \n",
        "\n",
-       "                                             labels2  \\\n",
-       "0  leisure party drink vacation sitting furniture...   \n",
-       "1  mountainous landforms mountain mountain range ...   \n",
-       "2  tree adaptation working animal child grass pla...   \n",
-       "3  bird penguin vertebrate flightless bird beak a...   \n",
-       "4  marine mammal marine biology cetacea underwate...   \n",
-       "\n",
-       "                                        final_vector  \n",
-       "0  happypills pills pharma bigpharmaleisure party...  \n",
-       "1  1 2mountainous landforms mountain mountain ran...  \n",
-       "2  followme madagascar enoughness naturetree adap...  \n",
-       "3  snowstorm penguin antarcticabird penguin verte...  \n",
-       "4  whales humpbackwhales parenting planetofthewha...  "
+       "                                             labels2  \n",
+       "0  leisure party drink vacation sitting furniture...  \n",
+       "1  mountainous landforms mountain mountain range ...  \n",
+       "2  tree adaptation working animal child grass pla...  \n",
+       "3  bird penguin vertebrate flightless bird beak a...  \n",
+       "4  marine mammal marine biology cetacea underwate...  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,20 +651,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE using random forest on instagram captions is: 1.07\n"
+      "RMSE using random forest on google labels is: 1.07\n"
      ]
     }
    ],
    "source": [
     "rmse_rf = np.sqrt(np.mean((predictions_rf - y_val_m)**2))\n",
-    "print('RMSE using random forest on instagram captions is:', round(rmse_rf, 2))"
+    "print('RMSE using random forest on google labels is:', round(rmse_rf, 2))"
    ]
   },
   {
@@ -680,14 +676,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE using XGB on instagram captions is: 1.06\n"
+      "RMSE using XGB on Google labels is: 1.06\n"
      ]
     }
    ],
@@ -710,7 +706,7 @@
     "\n",
     "\n",
     "rmse_xgb = np.sqrt(np.mean((preds_xgb - y_val_m)**2))\n",
-    "print('RMSE using XGB on instagram captions is:', round(rmse_xgb, 2))"
+    "print('RMSE using XGB on Google labels is:', round(rmse_xgb, 2))"
    ]
   },
   {
@@ -722,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,20 +759,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE using random forest on instagram captions is: 1.09\n"
+      "RMSE using random forest on both instagram captions and google labels is: 1.09\n"
      ]
     }
    ],
    "source": [
     "rmse_rf = np.sqrt(np.mean((predictions_rf - y_val_m)**2))\n",
-    "print('RMSE using random forest on instagram captions is:', round(rmse_rf, 2))"
+    "print('RMSE using random forest on both instagram captions and google labels is:', round(rmse_rf, 2))"
    ]
   },
   {
@@ -788,14 +784,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE using XGB on instagram captions is: 1.06\n"
+      "RMSE using XGB on both instagram captions and google labels is: 1.06\n"
      ]
     }
    ],
@@ -818,7 +814,7 @@
     "\n",
     "\n",
     "rmse_xgb = np.sqrt(np.mean((preds_xgb - y_val_m)**2))\n",
-    "print('RMSE using XGB on instagram captions is:', round(rmse_xgb, 2))"
+    "print('RMSE using XGB on both instagram captions and google labels is:', round(rmse_xgb, 2))"
    ]
   },
   {
