--- a/Project/TwitterScraper.ipynb
+++ b/Project/TwitterScraper.ipynb
@@ -19,10 +19,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key = 'loTI6lwPRfZpY59ytQ2XNCbuU'\n",
-    "consumer_secret = 'aDCWMjAniyjjKKTLAWBDvKa0YYwdaFTw2pJHAIaIFTGopRlw5I'\n",
-    "access_token = '636142159-KSwJYFLFZRX39gPnlEuxCmvgtmeRtgeE617ulIqz'\n",
-    "access_secret = 'NBYoGB4FBBSIn79jTCqODJ0VTRRYOXe6DRWJd9XH4a9UG'"
+    "consumer_key = ''\n",
+    "consumer_secret = ''\n",
+    "access_token = ''\n",
+    "access_secret = ''"
    ]
   },
   {
