--- a/Project/TwitterScraper.ipynb
+++ b/Project/TwitterScraper.ipynb
@@ -19,24 +19,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key = ''\n",
-    "consumer_secret = ''\n",
-    "access_token = ''\n",
-    "access_secret = ''"
+    "with open('twitter_credentials.json') as cred_data:\n",
+    "\tinfo = json.load(cred_data)\n",
+    "\tconsumer_key = info['CONSUMER_KEY']\n",
+    "\tconsumer_secret = info['CONSUMER_SECRET']\n",
+    "\taccess_key = info['ACCESS_KEY']\n",
+    "\taccess_secret = info['ACCESS_SECRET']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number of tweets that you want to extract- 5000\n",
+      "Enter the number of tweets that you want to extract- 10000\n",
       "Enter the hashtag you want to scrape- FinalStrike\n",
-      "Extracted 5000 tweets with hashtag #FinalStrike\n"
+      "Extracted 10000 tweets with hashtag #FinalStrike\n"
      ]
     }
    ],
@@ -48,7 +50,7 @@
     "hashtag = input('Enter the hashtag you want to scrape- ')\n",
     "\n",
     "auth = OAuthHandler(consumer_key, consumer_secret)\n",
-    "auth.set_access_token(access_token, access_secret)\n",
+    "#auth.set_access_token(access_token, access_secret)\n",
     "api = tweepy.API(auth, wait_on_rate_limit=True)\n",
     "\n",
     "statuses = tweepy.Cursor(api.search, q='#' + hashtag,\n",
@@ -114,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
